unpackaged/main/default/objects/VehicleDriveTime__c/VehicleDriveTime__c.object-meta.xml
<CustomObject>
    <label>Vehicle Drive Time</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Vehicle Drive Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Drive Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>