unpackaged/main/default/objects/VehicleDriveTime__c/fields/ArrivalAddress__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAddress__c</fullName>
    <label>Arrival Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>