unpackaged/main/default/objects/VehicleDriveTime__c/fields/CurrentStop__c.field-meta.xml
<CustomField>
    <fullName>CurrentStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Stop</label>
    <referenceTo>VehicleStop__c</referenceTo>
    <relationshipLabel>Vehicle Drive Times</relationshipLabel>
    <relationshipName>Vehicle_Drive_Times</relationshipName>
    <type>Lookup</type>
</CustomField>