unpackaged/main/default/objects/VehicleDriveTime__c/fields/DepartTime__c.field-meta.xml
<CustomField>
    <fullName>DepartTime__c</fullName>
    <label>Depart Time</label>
    <type>DateTime</type>
</CustomField>