unpackaged/main/default/objects/VehicleDriveTime__c/fields/DepartureAddress__c.field-meta.xml
<CustomField>
    <fullName>DepartureAddress__c</fullName>
    <label>Departure Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>