unpackaged/main/default/objects/VehicleDriveTime__c/fields/Distance_From_Previous_Stop__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Previous_Stop__c</fullName>
    <label>Distance From Previous Stop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>