unpackaged/main/default/objects/VehicleDriveTime__c/fields/LengthOfTimeAtDestinationMinutes__c.field-meta.xml
<CustomField>
    <fullName>LengthOfTimeAtDestinationMinutes__c</fullName>
    <label>Length Of Time At Destination (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>