unpackaged/main/default/objects/VehicleDriveTime__c/fields/PreviousStop__c.field-meta.xml
<CustomField>
    <fullName>PreviousStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Stop</label>
    <referenceTo>VehicleStop__c</referenceTo>
    <relationshipLabel>Vehicle Drive Times (Previous Stop)</relationshipLabel>
    <relationshipName>Vehicle_Drive_Times1</relationshipName>
    <type>Lookup</type>
</CustomField>