unpackaged/main/default/objects/VehicleDriveTime__c/fields/VehicleDailySummary__c.field-meta.xml
<CustomField>
    <fullName>VehicleDailySummary__c</fullName>
    <label>Vehicle Daily Summary</label>
    <referenceTo>VehicleDailySummary__c</referenceTo>
    <relationshipLabel>Vehicle Drive Times</relationshipLabel>
    <relationshipName>Vehicle_Drive_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>