unpackaged/main/default/objects/VehicleDriveTime__c/fields/Windshield_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Windshield_Time_Minutes__c</fullName>
    <label>Windshield Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>